SB - clean up loading, fix Safari layout issues

--- a/public/admin/assets/css/frontend-admin.css
+++ b/public/admin/assets/css/frontend-admin.css
@@ -6306,6 +6306,16 @@ a[href="https://froala.com/wysiwyg-editor"] {
   height: 100%;
   height: 100vh;
   overflow: auto;
+  background: #131e26;
+}
+.ssb-site-builder-container .loading-editor {
+  position: relative;
+  top: 225px;
+  background: #131e26;
+  color: white;
+}
+.ssb-site-builder-container .loading-editor h1 {
+  color: white;
 }
 .ssb-site-builder-container #componentloader .component-wrap {
   background: transparent;
@@ -6315,6 +6325,10 @@ a[href="https://froala.com/wysiwyg-editor"] {
   padding: 0;
   height: 100%;
   display: block;
+}
+.ssb-site-builder .empty-page {
+  position: relative;
+  top: 100px;
 }
 .ssb-site-builder .ssb-main {
   top: 60px;
@@ -6539,6 +6553,7 @@ a[href="https://froala.com/wysiwyg-editor"] {
   display: none;
   height: 200px;
   clear: both;
+  background: #131e26;
 }
 .ssb-sidebar img {
   max-width: 100%;
@@ -6724,6 +6739,8 @@ a[href="https://froala.com/wysiwyg-editor"] {
 }
 .ssb-sidebar-inner {
   height: 100%;
+  height: 100vh;
+  transform: transform3d(0, 0, 0);
 }
 .ssb-sidebar-inner .editor-group {
   float: left;
