--- a/public/less/ssb-site-builder/ssb-sidebar.less
+++ b/public/less/ssb-site-builder/ssb-sidebar.less
@@ -1,11 +1,12 @@
 .ssb-sidebar {
-	// overflow: scroll;
-	// overflow-x: hidden;
 	display: none;
 	height: 200px;
-    // box-shadow: 0px -1px 3px 1px rgba(0, 0, 0, .5);
     clear: both;
-    // padding-right: 70px;
+    background: #131e26;
+    // opacity: 0;
+    // animation: fadeIn .5s 1s forwards;
+    // transition: opacity 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530); /* easeInQuad */
+
 
     img {
       max-width: 100%;
@@ -271,10 +272,9 @@
 }
 
 .ssb-sidebar-inner {
-    // transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530); /* easeInQuad */
-    // position: relative;
-    // width: 200%;
     height: 100%;
+    height: 100vh; //fixes safari issue
+    transform: transform3d(0,0,0);
 
     .editor-group {
         float: left;
@@ -307,6 +307,10 @@
             border: none;
             box-shadow: none;
         }
+    }
+
+    .site-editor-group {
+        //transition: all 500ms cubic-bezier(0.550, 0.085, 0.680, 0.530); /* easeInQuad */
     }
 
     .site-editor-group-add .ssb-sidebar-sub-heading {
