--- a/public/less/ssb-site-builder/ssb-site-builder.less
+++ b/public/less/ssb-site-builder/ssb-site-builder.less
@@ -42,6 +42,18 @@ a[href="https://froala.com/wysiwyg-editor"] {
 	height: 100%;
 	height: 100vh;
     overflow: auto;
+    background: #131e26;
+
+    .loading-editor {
+        position: relative;
+        top: 225px;
+        background: #131e26;
+        color: white;
+
+        h1 {
+            color: white;
+        }
+    }
 
     #componentloader .component-wrap {
         background: transparent;
@@ -54,6 +66,15 @@ a[href="https://froala.com/wysiwyg-editor"] {
 	height: 100%;
 	// width: 100%;
 	display: block;
+
+    .empty-page {
+        position: relative;
+        top: 100px;
+    }
+
+    .ssb-empty-page-add-btn {
+
+    }
 
 	.ssb-main {
 
